--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html {
 
 nav {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
@@ -28,10 +28,10 @@ nav a {
   min-width: 9rem;
   padding: 0.5rem;
   border-radius: 0.2rem;
-  border: solid 1px #aaa;
   text-align: center;
   text-decoration: none;
   color: rgb(0, 0, 0);
+  flex: 1 1 auto;
 }
 
 nav a[aria-current='page'] {
@@ -51,5 +51,8 @@ h1 {
 .para {
   display: inline;
   color: black;
-  
+}
+nav a:hover {
+  background-color: rgb(35, 40, 44);
+  color: bisque;
 }
